--- a/sub/certificate.html
+++ b/sub/certificate.html
@@ -26,7 +26,7 @@
                         <div class="h_logo">
                             <a href="../index.html">
                                 <img src="../img/logo_new.png" alt="bosung_logo" class="p_show">
-                                <img src="../logo_new_bo.png" alt="bosung_logo" class="s_show">
+                                <img src="../img/logo_new_bo.png" alt="bosung_logo" class="s_show">
                             </a>
                         </div>       
                         <div class="ff_box">
