--- a/sub/company.html
+++ b/sub/company.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/main_common.css">
+    <link rel="stylesheet" href="../css/sub.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tendina@0.11.1/dist/tendina.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css">
@@ -25,7 +26,7 @@
                         <div class="h_logo">
                             <a href="../index.html">
                                 <img src="../img/logo_new.png" alt="bosung_logo" class="p_show">
-                                <img src="../logo_new_bo.png" alt="bosung_logo" class="s_show">
+                                <img src="../img/logo_new_bo.png" alt="bosung_logo" class="s_show">
                             </a>
                         </div>       
                         <div class="ff_box">
@@ -334,7 +335,7 @@
                                     <li class="d01">
                                         <div class="i_box">
                                             <div class="radius">
-                                                <img src="/web/project/bosung/img/philosophy_01.png" alt="philosophy icon">
+                                                <img src="../img/philosophy_01.png" alt="philosophy icon">
                                                 <p class="s_nam">신뢰와 책임 자율경영</p>
                                             </div>
                                         </div>
@@ -342,7 +343,7 @@
                                     <li class="d02">
                                         <div class="i_box">
                                             <div class="radius">
-                                                <img src="/web/project/bosung/img/philosophy_02.png" alt="philosophy icon">
+                                                <img src="../img/philosophy_02.png" alt="philosophy icon">
                                                 <p class="s_nam">인재중심 인간존중</p>
                                             </div>
                                         </div>
@@ -350,7 +351,7 @@
                                     <li class="d03">
                                         <div class="i_box">
                                             <div class="radius">
-                                                <img src="/web/project/bosung/img/philosophy_03.png" alt="philosophy icon">
+                                                <img src="../img/philosophy_03.png" alt="philosophy icon">
                                                 <p class="s_nam">고객감동 고객제일주의</p>
                                             </div>
                                         </div>
@@ -358,7 +359,7 @@
                                     <li class="d04">
                                         <div class="i_box">
                                             <div class="radius">
-                                                <img src="/web/project/bosung/img/philosophy_04.png" alt="philosophy icon">
+                                                <img src="../img/philosophy_04.png" alt="philosophy icon">
                                                 <p class="s_nam">사회기여 글로벌 최고지향</p>
                                             </div>
                                         </div>
@@ -372,13 +373,13 @@
                     <ul class="thumb">
                         <li>
                             <figure>
-                                <a href="/web/project/bosung/sub/certificate.html">
-                                    <img src="/web/project/bosung/img/certificate.jpg" alt="">
+                                <a href="../sub/certificate.html">
+                                    <img src="../img/certificate.jpg" alt="">
                                 </a>
                             </figure>
                             <div class="txt">
                                 <div class="cont">
-                                    <a href="/web/project/bosung/sub/certificate.html">
+                                    <a href="../sub/certificate.html">
                                         <h5 class="s_bam">인증서</h5>
                                         <p class="s_sam">(주)보성공업은 고객경영, 윤리경영, 환경경영의...
                                         </p>
@@ -391,21 +392,20 @@
                         </li>
                         <li>
                             <figure>
-                                <a href="/web/project/bosung/sub/direction.html">
-                                    <img src="/web/project/bosung/img/direction.jpg" alt="">
+                                <a href="../sub/direction.html">
+                                    <img src="../img/direction.jpg" alt="">
                                 </a>
                             </figure>
                             <div class="txt">
                                 <div class="cont">
-                                    <a href="/web/project/bosung/sub/direction.html">
+                                    <a href="../sub/direction.html">
                                         <h5 class="s_bam">오시는 길</h5>
                                         <p class="s_sam">(주)보성공업은 고객경영, 윤리경영, 환경경영의...
                                         </p>
                                         <span class="view s_sam">
                                             <span>view more <i></i></span></span>
                                     </a>
-                                </div>                              
-                              
+                                </div>                             
                             </div>
                         </li>                       
                     </ul>
@@ -415,12 +415,12 @@
                 <h2 class="hidden">footer area</h2>
                 <div class="inner">
                     <div id="f_logo">
-                        <a href="/web/project/bosung/"><img src="/web/project/bosung/img/logo_new.png" alt="bosunglogo"></a>
+                        <a href="../index.html"><img src="../img/logo_new.png" alt="bosunglogo"></a>
                     </div>
                     <ul class="f_nav f_gnb">
-                        <li><a href="/web/project/bosung/sub/greetings.html" class="fo_bold">우리는 누구인가</a></li>
-                        <li><a href="/web/project/bosung/sub/wedo.html" class="fo_bold">우리가 하는 일</a></li>
-                        <li><a href="/web/project/bosung/sub/markets.html" class="fo_bold">시장</a></li>
+                        <li><a href="../sub/greetings.html" class="fo_bold">우리는 누구인가</a></li>
+                        <li><a href="../sub/wedo.html" class="fo_bold">우리가 하는 일</a></li>
+                        <li><a href="../sub/markets.html" class="fo_bold">시장</a></li>
             
                     </ul>                   
                 </div>
