--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                                                     <p class="ma_small">미 육군에 전술 차륜형 차량, 궤도 전투 차량(전차, 장갑차, 자주포, 다연장로켓포, 전차 복구 차량, 장갑 전투 차량), 통신/전자 장비 및 전투 엔지니어 장비에 대한 예방 정비, 현장 정비 및 창고 수준의 정비를 지속적으로 개발 및 제공하는 기술 제조 사업입니다.                                     
                                                     </p>                                                
                                                     <div class="view">
-                                                        <a href="">view more <i></i></a>
+                                                        <a href="sub/mro.html">view more <i></i></a>
                                                     </div>
                                                 </div>
                                             </div>                                           
@@ -308,7 +308,7 @@
                                                     <p class="ma_small">미 육군에 전술 차륜형 차량, 궤도 전투 차량(전차, 장갑차, 자주포, 다연장로켓포, 전차 복구 차량, 장갑 전투 차량), 통신/전자 장비 및 전투 엔지니어 장비에 대한 예방 정비, 현장 정비 및 창고 수준의 정비를 지속적으로 개발 및 제공하는 기술 제조 사업입니다. 
                                                     </p>                                                
                                                     <div class="view">
-                                                        <a href="">view more <i></i></a>
+                                                        <a href="sub/mro.html">view more <i></i></a>
                                                     </div>
                                                 </div>
                                             </div>             
@@ -323,7 +323,7 @@
                                                     <p class="ma_small">미 육군에 전술 차륜형 차량, 궤도 전투 차량(전차, 장갑차, 자주포, 다연장로켓포, 전차 복구 차량, 장갑 전투 차량), 통신/전자 장비 및 전투 엔지니어 장비에 대한 예방 정비, 현장 정비 및 창고 수준의 정비를 지속적으로 개발 및 제공하는 기술 제조 사업입니다.
                                                     </p>                                               
                                                     <div class="view">
-                                                        <a href="">view more <i></i></a>
+                                                        <a href="sub/mro.html">view more <i></i></a>
                                                     </div>
                                                 </div>
                                             </div>             
@@ -345,7 +345,7 @@
                                                     <p class="ma_small">미 육군에 전술 차륜형 차량, 궤도 전투 차량(전차, 장갑차, 자주포, 다연장로켓포, 전차 복구 차량, 장갑 전투 차량), 통신/전자 장비 및 전투 엔지니어 장비에 대한 예방 정비, 현장 정비 및 창고 수준의 정비를 지속적으로 개발 및 제공하는 기술 제조 사업입니다.
                                                     </p>                                                
                                                     <div class="view">
-                                                        <a href="">view more <i></i></a>
+                                                        <a href="sub/mro.html">view more <i></i></a>
                                                     </div>
                                                 </div>
                                             </div>                                           
@@ -360,7 +360,7 @@
                                                     <p class="ma_small">미 육군에 전술 차륜형 차량, 궤도 전투 차량(전차, 장갑차, 자주포, 다연장로켓포, 전차 복구 차량, 장갑 전투 차량), 통신/전자 장비 및 전투 엔지니어 장비에 대한 예방 정비, 현장 정비 및 창고 수준의 정비를 지속적으로 개발 및 제공하는 기술 제조 사업입니다.
                                                     </p>                                               
                                                     <div class="view">
-                                                        <a href="">view more <i></i></a>
+                                                        <a href="sub/mro.html">view more <i></i></a>
                                                     </div>
                                                 </div>
                                             </div>                                           
@@ -375,7 +375,7 @@
                                                     <p class="ma_small">미 육군에 전술 차륜형 차량, 궤도 전투 차량(전차, 장갑차, 자주포, 다연장로켓포, 전차 복구 차량, 장갑 전투 차량), 통신/전자 장비 및 전투 엔지니어 장비에 대한 예방 정비, 현장 정비 및 창고 수준의 정비를 지속적으로 개발 및 제공하는 기술 제조 사업입니다.
                                                     </p>                                                
                                                     <div class="view">
-                                                        <a href="">view more <i></i></a>
+                                                        <a href="sub/mro.html">view more <i></i></a>
                                                     </div>
                                                 </div>
                                             </div>                                           
@@ -400,7 +400,7 @@
                                         <div class="subject ma_namal">기본의 소중함과 보이지 않는 것의 가치를 파악하고 신속하게 해결책을 제시합니다. 기본의 소중함과 보이지 않는 것의 가치를 파악하고 신속하게 해결책을 제시합니다.
                                         </div>
                                         <div class="btn">
-                                            <a href="" >view more <i></i></a>
+                                            <a href="#!" >view more <i></i></a>
                                         </div>
                                     </div>
                                 </li>
@@ -411,7 +411,7 @@
                                         <div class="subject ma_namal">기본의 소중함과 보이지 않는 것의 가치를 파악하고 신속하게 해결책을 제시합니다. 기본의 소중함과 보이지 않는 것의 가치를 파악하고 신속하게 해결책을 제시합니다.
                                         </div>
                                         <div class="btn">
-                                            <a href="" class="ma_box">view more <i></i></a>
+                                            <a href="#!" class="ma_box">view more <i></i></a>
                                         </div>
                                     </div>
                                 </li>
@@ -422,7 +422,7 @@
                                         <div class="subject ma_namal">기본의 소중함과 보이지 않는 것의 가치를 파악하고 신속하게 해결책을 제시합니다. 기본의 소중함과 보이지 않는 것의 가치를 파악하고 신속하게 해결책을 제시합니다.
                                         </div>
                                         <div class="btn">
-                                            <a href="" class="ma_box">view more <i></i></a>
+                                            <a href="#!" class="ma_box">view more <i></i></a>
                                         </div>
                                     </div>
                                 </li>
